# shelly

./: .env.example  CLAUDE.md  Cargo.toml  justfile  tools.toml
docs/: brain-design.md  claude_messages_api.md  cli-ux.md  comm-design.md  comm-verify.md  executor-design.md  mainloop-design.md  mem-design.md
src/: main.rs
src/agent/: config.rs  error.rs  inference.rs  loop_.rs  mod.rs  types.rs
src/brain/: builder.rs  client.rs  error.rs  mod.rs  types.rs
src/comm/: config.rs  error.rs  mod.rs  protocol.rs  server.rs  types.rs
src/executor/: bash.rs  config.rs  error.rs  mod.rs  runner.rs  tool.rs  types.rs
src/memory/: config.rs  error.rs  mod.rs  similarity.rs  storage.rs  types.rs
tests/: test_brain.rs  test_comm.rs  test_executor.rs
