[package]
name = "shelly"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dotenvy = "0.15"
toml = { version = "1.0.3", features = ["serde"] }
rmp-serde = "1"
rmp = "0.8"
futures = "0.3"

# Memory module dependencies
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
dirs = "5"
rustyline = "15"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"

[[bin]]
name = "shelly"
path = "src/main.rs"

[[bin]]
name = "shelly-cli"
path = "src/bin/shelly-cli.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
